Upgrade to fastjson2 api (#76)