@@ -43,7 +43,8 @@ dependencies {
     implementation group: 'com.dslplatform', name: 'dsl-json-java8', version: "${dslJsonVersion}"
     annotationProcessor group: 'com.dslplatform', name: 'dsl-json-java8', version: "${dslJsonVersion}"
     // FastJson
-    implementation group: 'com.alibaba', name: 'fastjson', version: '2.0.27'
+    implementation group: 'com.alibaba.fastjson2', name: 'fastjson2', version: '2.0.31'
+    implementation group: 'com.alibaba.fastjson2', name: 'fastjson2-incubator-vector', version: '2.0.31'
     // FlexJson
     implementation group: 'net.sf.flexjson', name: 'flexjson', version: '3.3'
     // GENSON
@@ -111,7 +112,7 @@ shadowJar {
 }
 
 test {
-    jvmArgs '--add-opens=java.base/java.time=ALL-UNNAMED'
+    jvmArgs '--add-opens=java.base/java.time=ALL-UNNAMED --add-modules=jdk.incubator.vector'
     testLogging {
         exceptionFormat = 'full'
         showStandardStreams = true
